[gd_scene load_steps=4 format=3 uid="uid://f82pa8uhgjhx"]

[ext_resource type="Theme" uid="uid://clsxu0gwjbjhx" path="res://themes/offer.tres" id="1_i4ciq"]
[ext_resource type="Script" path="res://scripts/offer.gd" id="2_4r145"]
[ext_resource type="Texture2D" uid="uid://cr2npb8v5wmho" path="res://assets/textures/Gold.png" id="2_xv466"]

[node name="Offer" type="Control"]
custom_minimum_size = Vector2(258, 169)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1661.0
offset_bottom = -911.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
theme = ExtResource("1_i4ciq")
script = ExtResource("2_4r145")
metadata/type = "diamond"
metadata/amount = 1
metadata/price = "4.99"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0.913725, 0.729412, 1)
text = "300x"
horizontal_alignment = 2

[node name="TypeSprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_xv466")
expand_mode = 3
stretch_mode = 4

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "4.99â‚¬"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
